Multiselect for role permissions visibility fix.

--- a/src/app/pages/roles-page/role-view/role-view.component.scss
+++ b/src/app/pages/roles-page/role-view/role-view.component.scss
@@ -1,4 +1,4 @@
 table-advanced {
   display: block;
-  margin: 20px 0;
+  margin: 20px 0 65px 0;
 }
